<resources>
    <string name="app_name">Notes</string>
    <string name="new_note">New Note</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>

    <string name="enter_your_note_here">Enter your note here</string>

    <string name="tab_label_todo">TODO</string>
    <string name="tab_label_doing">DOING</string>
    <string name="tab_label_done">DONE</string>
    <string name="delete_dialog_title">Delete note</string>
    <string name="delete_dialog_text">Are you sure you want to delete this note?</string>
    <string name="delete_all_dialog_text">Are you sure you want to delete all notes?</string>
    <string name="delete_dialog_yes_button_label">Yes</string>
    <string name="delete_dialog_no_button_label">No</string>
    <string name="new_task">New task</string>
    <string name="delete_btn_cont_desc">Delete button</string>
    <string name="color_btn_cont_desc">Open/close color palette button</string>
    <string name="drag_btn_cont_desc">Hold and drag note button</string>
    <string name="blue_btn_cont_desc">Blue color button</string>
    <string name="green_btn_cont_desc">Green color button</string>
    <string name="yellow_btn_cont_desc">Yellow color button</string>
    <string name="red_btn_cont_desc">Pink color button</string>
    <string name="note_description_is_required">Note Description is Required</string>
    <string name="note_title_is_required">Note Title is Required</string>
    <string name="archive_btn_desc">Archive button</string>
    <string name="notification_btn_desc">Notifiacion button</string>
    <string name="share_btn_desc">Share button</string>
    <string name="pallete_btn_desc">Coler picker button</string>
    <string name="buttons_background">Buttons background</string>
    <string name="your_archive_is_empty">YOUR ARCHIVE IS EMPTY</string>
    <string name="your_trash_is_empty">YOUR TRASH IS EMPTY</string>
    <string name="no_notes_to_display">NO NOTES TO DISPLAY</string>
    <string name="title">Title</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="note_added_successfully">Note added successfully</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="note_moved_to_trash">Note moved to trash folder</string>
    <string name="app_settings_prefs">AppSettingsPrefs</string>
    <string name="dark_modeKey">DarkMode</string>
    <string name="dark_mode_off">Dark Mode OFF</string>
    <string name="dark_mode_on">Dark Mode ON</string>
    <string name="new_note_top">NewNoteTop</string>
    <string name="add_new_notes_to_top">Add new notes to top</string>
    <string name="navheaderimage">NavHeaderImage</string>
    <string name="new_note_back_button">new note back button</string>
    <string name="save_note">save note changes</string>
    <string name="floating_action_button_to_create_new_note">Floating action button to create new note</string>
    <string name="pin_button_desc">Pin button</string>
    <string name="automatically_turn_dark_mode_on">Automatically turn Dark Mode ON</string>
    <string name="auto_dark_mode_on">AutoDarkModeON</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="note_title">\"Note Title: \"</string>
    <string name="note_text">\"Note Text: \"</string>
    <string name="text_plaint">text/plain</string>
</resources>