<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navDrawerMenu"
        android:checkableBehavior="none">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_baseline_notes_24"
        android:title="@string/notes" />
    <item
        android:id="@+id/archiveFragment"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/archive" />
    <item
        android:id="@+id/trashFragment"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/trash" />
    </group>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>