<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="note"
            type="sk.uniza.fri.sudora.notes.Note" />
        <variable
            name="clickListener"
            type="sk.uniza.fri.sudora.adapter.NoteListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/note_card_yellow"
        android:onClick="@{() -> clickListener.onClick(note)}">

        <ImageView
            android:id="@+id/btns_background"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:contentDescription="@string/buttons_background"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_text_view"
            app:layout_constraintEnd_toEndOf="@+id/btn_share"
            app:srcCompat="@drawable/color_palette_background" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/note_button_background"
            android:backgroundTint="#1E202124"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/delete_btn_cont_desc"
            android:padding="8dp"
            android:tint="#8C202124"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_delete_24px"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <ImageButton
            android:id="@+id/btn_archive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/note_button_background"
            android:backgroundTint="#1E202124"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/archive_btn_desc"
            android:padding="8dp"
            android:tint="#8C202124"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_delete"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_archive_24"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btn_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/note_button_background"
            android:backgroundTint="#1E202124"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/pin_button_desc"
            android:padding="8dp"
            android:tint="#8C202124"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_archive"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/pin"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/note_button_background"
            android:backgroundTint="#1E202124"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/share_btn_desc"
            android:padding="8dp"
            android:tint="#8C202124"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_pin"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_share_24"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/color_palette_background"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_palette"
            app:layout_constraintTop_toBottomOf="@id/note_text_view"
            app:layout_constraintVertical_bias="0.6"
            app:srcCompat="@drawable/color_palette_background" />

        <ImageButton
            android:id="@+id/btn_palette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="76dp"
            android:background="@drawable/note_button_background"
            android:backgroundTint="#1E202124"
            android:backgroundTintMode="src_in"
            android:contentDescription="@string/pallete_btn_desc"
            android:padding="8dp"
            android:tint="#8C202124"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_share"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_palette_24px"
            tools:ignore="MissingConstraints" />


        <ImageButton
            android:id="@+id/yellow_color_picker"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/yellow_note"
            android:backgroundTintMode="multiply"
            android:background="@drawable/note_button_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/green_color_picker"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:srcCompat="@android:color/transparent"
            android:contentDescription="@string/yellow_btn_cont_desc" />

        <ImageButton
            android:id="@+id/green_color_picker"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/note_button_color"
            android:backgroundTint="@color/green_note"
            android:backgroundTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/blue_color_picker"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:srcCompat="@android:color/transparent"
            android:contentDescription="@string/green_btn_cont_desc" />

        <ImageButton
            android:id="@+id/blue_color_picker"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:background="@drawable/note_button_color"
            android:backgroundTint="@color/blue_note"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/blue_btn_cont_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/red_color_picker"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:srcCompat="@android:color/transparent" />

        <ImageButton
            android:id="@+id/red_color_picker"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/note_button_color"
            android:backgroundTint="@color/red_note"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/red_btn_cont_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_palette"
            app:layout_constraintTop_toBottomOf="@+id/note_text_view"
            app:srcCompat="@android:color/transparent" />


        <TextView
            android:id="@+id/note_title_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/note_text"
            android:textSize="24sp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="2dp"
            tools:text="Note Title View" />

        <TextView
            android:id="@+id/note_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:maxLines="5"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/note_text"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/note_title_view"
            tools:layout_editor_absoluteX="16dp"
            tools:text="Note Text View" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>