<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        tools:context=".notes.CreateNoteFragment">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/note_button_background"
            android:backgroundTint="#1E202124"
            android:backgroundTintMode="src_in"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/new_note_back_button" />

        <ImageView
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/note_button_background"
            android:backgroundTint="#1E202124"
            android:backgroundTintMode="src_in"
            android:src="@drawable/ic_baseline_done_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/save_note" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/title"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_title_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteTitleInput"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:maxLength="30"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/noteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="4dp"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/enter_your_note_here"
            android:inputType="textMultiLine"
            android:maxLines="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>